--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "devDependencies": {
     "@stylistic/eslint-plugin": "^4.4.0",
-    "lerna": "^8.2.2"
+    "lerna": "^8.2.2",
+    "prisma": "^6.8.2"
   },
   "scripts": {
     "lint": "lerna run lint --stream --since",
@@ -13,6 +14,7 @@
     "packages/*"
   ],
   "dependencies": {
+    "@prisma/client": "^6.8.2",
     "@tailwindcss/vite": "^4.1.8",
     "tailwindcss": "^4.1.8"
   }
