Connect front end to server and server to database

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -16,7 +16,10 @@
     "@eslint/compat": "^1.2.9",
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.27.0",
+    "@types/cors": "^2.8.18",
     "@types/node": "^22.15.24",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^9.27.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-import-quotes": "^0.0.1",
@@ -26,12 +29,11 @@
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.33.0",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0"
+    "typescript-eslint": "^8.33.0"
   },
   "dependencies": {
     "@types/express": "^5.0.2",
+    "cors": "^2.8.5",
     "express": "^5.1.0"
   }
 }
