--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "@stylistic/eslint-plugin": "^4.4.0",
     "@types/bcrypt": "^5.0.2",
     "lerna": "^8.2.2",
-    "prisma": "^6.8.2"
+    "prisma": "^6.8.2",
+    "ts-node-dev": "^2.0.0"
   },
   "scripts": {
     "lint": "lerna run lint --stream --since",
