--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "@prisma/client": "^6.8.2",
     "@tailwindcss/vite": "^4.1.8",
+    "react-router": "^7.6.2",
+    "react-router-dom": "^7.6.2",
     "tailwindcss": "^4.1.8"
   }
 }
