--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@prisma/client": "^6.8.2",
     "@tailwindcss/vite": "^4.1.8",
+    "axios": "^1.9.0",
     "react-router": "^7.6.2",
     "react-router-dom": "^7.6.2",
     "bcrypt": "^6.0.0",
