--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "devDependencies": {
     "@stylistic/eslint-plugin": "^4.4.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.18",
     "lerna": "^8.2.2",
-    "prisma": "^6.8.2",
+    "prisma": "^6.9.0",
     "ts-node-dev": "^2.0.0"
   },
   "scripts": {
@@ -16,12 +17,13 @@
     "packages/*"
   ],
   "dependencies": {
-    "@prisma/client": "^6.8.2",
+    "@prisma/client": "^6.9.0",
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.9.0",
+    "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "react-router": "^7.6.2",
     "react-router-dom": "^7.6.2",
-    "bcrypt": "^6.0.0",
     "tailwindcss": "^4.1.8"
   }
 }
