--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -10,7 +10,7 @@
     "module": "commonjs",
     "outDir": "dist",
     "sourceMap": true,
-    "strict": false,
+    "strict": true,
     "target": "es6",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
