final schema fix

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ README.md
 /packages/server/.env
 /packages/server/dist/
 /prisma/.env
+/generated/prisma/
+/.vscode/
+/packages/client/node_modules/
