--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
   "dependencies": {
     "@prisma/client": "^6.9.0",
     "@tailwindcss/vite": "^4.1.8",
-    "bcrypt": "^6.0.0",
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
+    "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
+    "express-session": "^1.18.1",
     "react-router": "^7.6.2",
     "react-router-dom": "^7.6.2",
     "tailwindcss": "^4.1.8"
