remove generated code, update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
 node_modules/
-lerna-debug.log
-README.md
+packages/server/node_modules/
 .env
-/packages/server/node_modules/
-/packages/server/.env
-/packages/server/dist/
-/prisma/.env
+packages/server/.env
+prisma/.env
+packages/server/dist/
+generated/prisma/
+lerna-debug.log
+.vscode/
+.vscode/extensions.json
+.vscode/settings.json
+!prisma/migrations/
+!prisma/schema.prisma
