--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@stylistic/eslint-plugin": "^4.4.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.18",
+    "@types/d3": "^7.4.3",
     "lerna": "^8.2.2",
     "prisma": "^6.10.1",
     "ts-node-dev": "^2.0.0"
@@ -27,6 +28,7 @@
     "bcrypt": "^6.0.0",
     "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
+    "d3": "^7.9.0",
     "express-session": "^1.18.1",
     "react-router": "^7.6.2",
     "react-router-dom": "^7.6.2",
