--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
     "d3": "^7.9.0",
+    "express-rate-limit": "^7.5.1",
     "express-session": "^1.18.1",
     "react-router": "^7.6.2",
     "react-router-dom": "^7.6.2",
