--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "d3": "^7.9.0",
     "express-rate-limit": "^7.5.1",
     "express-session": "^1.18.1",
+    "framer-motion": "^12.19.1",
     "react-router": "^7.6.2",
     "react-router-dom": "^7.6.2",
     "tailwindcss": "^4.1.8"
