--- a/package.json
+++ b/package.json
@@ -3,12 +3,7 @@
   "private": true,
   "devDependencies": {
     "@stylistic/eslint-plugin": "^4.4.0",
-    "@types/bcrypt": "^5.0.2",
-    "@types/cors": "^2.8.18",
-    "@types/d3": "^7.4.3",
-    "lerna": "^8.2.2",
-    "prisma": "^6.10.1",
-    "ts-node-dev": "^2.0.0"
+    "lerna": "^8.2.2"
   },
   "scripts": {
     "lint": "lerna run lint --stream --since",
@@ -16,24 +11,13 @@
     "pull:perf-review": "prisma db pull --schema=prisma/schema.prisma",
     "generate:perf-review": "prisma generate --schema=prisma/schema.prisma",
     "pull:gitreports": "prisma db pull --schema=prisma/gitreports.schema.prisma",
-    "generate:gitreports": "prisma generate --schema=prisma/gitreports.schema.prisma"
+    "generate:gitreports": "prisma generate --schema=prisma/gitreports.schema.prisma",
+    "build": "lerna run build --stream"
   },
   "workspaces": [
     "packages/*"
   ],
   "dependencies": {
-    "@prisma/client": "^6.9.0",
-    "@tailwindcss/vite": "^4.1.8",
-    "axios": "^1.9.0",
-    "bcrypt": "^6.0.0",
-    "connect-pg-simple": "^10.0.0",
-    "cors": "^2.8.5",
-    "d3": "^7.9.0",
-    "express-rate-limit": "^7.5.1",
-    "express-session": "^1.18.1",
-    "framer-motion": "^12.19.1",
-    "react-router": "^7.6.2",
-    "react-router-dom": "^7.6.2",
-    "tailwindcss": "^4.1.8"
+    "axios": "^1.9.0"
   }
 }
