--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -11,12 +11,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^12.19.1",
+    "d3": "^7.9.0",
     "@tailwindcss/vite": "^4.1.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.8"
+    "tailwindcss": "^4.1.8",
+    "react-router": "^7.6.2",
+    "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.3",
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.2",
