--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -16,6 +16,8 @@
     "@eslint/compat": "^1.2.9",
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.27.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/config": "^3.3.5",
     "@types/connect-pg-simple": "^7.0.3",
     "@types/cors": "^2.8.18",
     "@types/express-session": "^1.18.1",
@@ -29,15 +31,21 @@
     "eslint-plugin-sort-keys-custom-order": "^2.2.1",
     "globals": "^16.2.0",
     "nodemon": "^3.1.10",
+    "prisma": "^6.10.1",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.33.0"
   },
   "dependencies": {
+    "@prisma/client": "^6.9.0",
     "@types/express": "^5.0.2",
+    "bcrypt": "^6.0.0",
+    "config": "^4.0.0",
     "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.1",
     "express-session": "^1.18.1",
     "ngrok": "^5.0.0-beta.2"
   }
