--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ lerna-debug.log
 .vscode/
 .vscode
 packages/database/.env
+packages/generated
+packages/generated/prisma
+packages/generated/gitreports/
