--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "packages/*"
   ],
   "dependencies": {
-    "axios": "^1.9.0"
+    "axios": "^1.9.0",
+    "lucide-react": "^0.525.0"
   }
 }
