--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -11,18 +11,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "framer-motion": "^12.19.1",
-    "d3": "^7.9.0",
+    "@hello-pangea/dnd": "^18.0.1",
     "@tailwindcss/vite": "^4.1.8",
+    "d3": "^7.9.0",
+    "framer-motion": "^12.19.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.8",
     "react-router": "^7.6.2",
-    "react-router-dom": "^7.6.2"
+    "react-router-dom": "^7.6.2",
+    "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
-    "@types/d3": "^7.4.3",
     "@eslint/js": "^9.25.0",
+    "@types/d3": "^7.4.3",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.2",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
