--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "packages/*"
   ],
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "axios": "^1.9.0",
-    "lucide-react": "^0.525.0"
+    "lucide-react": "^0.525.0",
+    "react-icons": "^5.5.0"
   }
 }
